@@ -8,7 +8,16 @@
 <metal:description fill-slot="content-description" />
 
 <div metal:fill-slot="content-core">
-<metal:content define-macro="content-core">
+<metal:content define-macro="content-core"
+           tal:define="older_versions view/does_replace">
+
+
+
+    <div class="portalMessage informationMessage" tal:condition="older_versions">
+        <span i18n:translate="">This is the latest published version. </span>
+        <a tal:attributes="href string:${context/absolute_url}#previous-versions" 
+           i18n:translate="">See older versions.</a>
+    </div>
 
   <!-- New versions -->
   <dl class="portalMessage warning publicationMessage"
@@ -258,18 +267,22 @@
 
     <!--Older versions-->
     <dl class="portalMessage publicationMessage"
-      tal:define="brains view/does_replace"
-      tal:condition="brains">
-      <dt class="portletHeader"
-        i18n:translate="">Older versions</dt>
-      <dd>
-      <ul>
-        <li class="portletItem" tal:repeat="brain brains">
-          <a tal:attributes="href brain/getPath"
-            tal:content="brain/Title" />
-        </li>
-      </ul>
-      </dd>
+        tal:condition="older_versions">
+        <dt class="portletHeader" id="previous-versions"
+            i18n:translate="">Older versions
+        </dt>
+        <dd>
+            <div id="publication_versions_controls">
+                <a href="#" class="first" i18n:translate="">Show</a>
+                <a href="#" class="hidden" i18n:translate="">Hide</a>
+            </div>
+            <ul style="display:none;">
+                <li class="portletItem" tal:repeat="brain older_versions">
+                    <a tal:attributes="href brain/getPath"
+                        tal:content="brain/Title" />
+                </li>
+            </ul>
+        </dd>
     </dl>
 
   </div>
